# VoxelEngine

./: CMakeLists.txt
VoxelEngineCore/: CMakeLists.txt
VoxelEngineCore/includes/Utils/: test.hpp
VoxelEngineCore/resources/: fragment.glsl  vertex.glsl
VoxelEngineCore/src/Utils/: test.cpp
VoxelEngineEditor/: CMakeLists.txt
VoxelEngineEditor/src/: main.cpp
